--- a/src/FoSouzaDev.FinancialControl.WebApi/FoSouzaDev.FinancialControl.WebApi.csproj
+++ b/src/FoSouzaDev.FinancialControl.WebApi/FoSouzaDev.FinancialControl.WebApi.csproj
@@ -7,6 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.Identity.Web" Version="3.1.0" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.4.0" />
   </ItemGroup>
 
