--- a/src/FoSouzaDev.FinancialControl.WebApi/appsettings.json
+++ b/src/FoSouzaDev.FinancialControl.WebApi/appsettings.json
@@ -1,4 +1,10 @@
 {
+  "AzureAd": {
+    "Instance": "https://login.microsoftonline.com/",
+    "TenantId": "",
+    "ClientId": "",
+    "Scopes": ""
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
