--- a/src/FoSouzaDev.FinancialControl.WebApi/FoSouzaDev.FinancialControl.WebApi.csproj
+++ b/src/FoSouzaDev.FinancialControl.WebApi/FoSouzaDev.FinancialControl.WebApi.csproj
@@ -1,14 +1,20 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
     <TargetFramework>net8.0</TargetFramework>
     <Nullable>enable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
+    <UserSecretsId>d3ebdcdc-bbec-4ac5-8d8d-556817ecaa4f</UserSecretsId>
   </PropertyGroup>
 
   <ItemGroup>
     <PackageReference Include="Microsoft.Identity.Web" Version="3.1.0" />
-    <PackageReference Include="Swashbuckle.AspNetCore" Version="6.4.0" />
+    <PackageReference Include="Swashbuckle.AspNetCore" Version="6.7.3" />
+    <PackageReference Include="Microsoft.AspNetCore.Mvc.NewtonsoftJson" Version="8.0.8" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\FoSouzaDev.FinancialControl.Application\FoSouzaDev.FinancialControl.Application.csproj" />
   </ItemGroup>
 
 </Project>
