Criação da Categoria

--- a/src/FoSouzaDev.FinancialControl.Infrastructure/FoSouzaDev.FinancialControl.Infrastructure.csproj
+++ b/src/FoSouzaDev.FinancialControl.Infrastructure/FoSouzaDev.FinancialControl.Infrastructure.csproj
@@ -10,4 +10,8 @@
     <ProjectReference Include="..\FoSouzaDev.FinancialControl.Domain\FoSouzaDev.FinancialControl.Domain.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <InternalsVisibleTo Include="FoSouzaDev.FinancialControl.WebApi" />
+  </ItemGroup>
+  
 </Project>
