--- a/src/FoSouzaDev.FinancialControl.Application/FoSouzaDev.FinancialControl.Application.csproj
+++ b/src/FoSouzaDev.FinancialControl.Application/FoSouzaDev.FinancialControl.Application.csproj
@@ -6,7 +6,15 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.AspNetCore.Mvc.NewtonsoftJson" Version="8.0.8" />
+  </ItemGroup>
+  
+  <ItemGroup>
     <ProjectReference Include="..\FoSouzaDev.FinancialControl.Domain\FoSouzaDev.FinancialControl.Domain.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <InternalsVisibleTo Include="FoSouzaDev.FinancialControl.WebApi" />
+  </ItemGroup>
+  
 </Project>
