--- a/src/FoSouzaDev.FinancialControl.Domain/FoSouzaDev.FinancialControl.Domain.csproj
+++ b/src/FoSouzaDev.FinancialControl.Domain/FoSouzaDev.FinancialControl.Domain.csproj
@@ -6,7 +6,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <Folder Include="ValueObjects\" />
+    <PackageReference Include="FoSouzaDev.Common.Domain" Version="1.1.3" />
   </ItemGroup>
 
 </Project>
