Crud da conta bancária

--- a/src/FoSouzaDev.FinancialControl.WebApi/appsettings.Development.json
+++ b/src/FoSouzaDev.FinancialControl.WebApi/appsettings.Development.json
@@ -1,8 +1,15 @@
 {
+  "AzureAd": {
+    "Instance": "https://login.microsoftonline.com/",
+    "TenantId": "",
+    "ClientId": "",
+    "Scopes": ""
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
-  }
+  },
+  "AllowedHosts": "*"
 }
