--- a/src/FoSouzaDev.FinancialControl.Infrastructure/FoSouzaDev.FinancialControl.Infrastructure.csproj
+++ b/src/FoSouzaDev.FinancialControl.Infrastructure/FoSouzaDev.FinancialControl.Infrastructure.csproj
@@ -15,6 +15,7 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.Http.Abstractions" Version="2.1.1" />
+    <PackageReference Include="MongoDB.EntityFrameworkCore" Version="8.1.1" />
   </ItemGroup>
   
 </Project>
