--- a/src/FoSouzaDev.FinancialControl.WebApi/appsettings.json
+++ b/src/FoSouzaDev.FinancialControl.WebApi/appsettings.json
@@ -11,5 +11,9 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "MongoDbSettings": {
+    "ConnectionUri": "mongodb://test:Abc1234@localhost:27017",
+    "DatabaseName": "fosouzadev-financialMovement"
+  }
 }
