--- a/src/FoSouzaDev.FinancialControl.WebApi/FoSouzaDev.FinancialControl.WebApi.csproj
+++ b/src/FoSouzaDev.FinancialControl.WebApi/FoSouzaDev.FinancialControl.WebApi.csproj
@@ -7,6 +7,8 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="AspNetCore.HealthChecks.MongoDb" Version="8.1.0" />
+    <PackageReference Include="Microsoft.Extensions.Diagnostics.HealthChecks" Version="8.0.8" />
     <PackageReference Include="Microsoft.Identity.Web" Version="3.1.0" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.7.3" />
   </ItemGroup>
