--- a/src/FoSouzaDev.FinancialControl.Domain/FoSouzaDev.FinancialControl.Domain.csproj
+++ b/src/FoSouzaDev.FinancialControl.Domain/FoSouzaDev.FinancialControl.Domain.csproj
@@ -11,6 +11,7 @@
 
   <ItemGroup>
     <InternalsVisibleTo Include="FoSouzaDev.FinancialControl.WebApi" />
+    <InternalsVisibleTo Include="FoSouzaDev.FinancialControl.UnitaryTests" />
   </ItemGroup>
   
 </Project>
